--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="https://formspree.io/manavagrawal2015@gmail.com">
+								<form method="POST" action="https://formspree.io/f/xpzoevpj">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
