--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="POST" action="https://formspree.io/f/xpzoevpj">
+								<!--<form method="POST" action="https://formspree.io/f/xpzoevpj">
 									<div class="fields">
 										<div class="field half">
 											<label for="name">Name</label>
@@ -121,7 +121,17 @@
 										<li><input type="submit" value="Send Message" class="primary" /></li>
 										<li><input type="reset" value="Reset" /></li>
 									</ul>
-								</form>
+								</form> -->
+							<form action="https://formspree.io/f/xpzoevpj" method="POST">
+ 							 <label>
+								    Your email: <input type="text" name="_replyto">
+							</label>
+							  <label>
+							    Your message: <textarea name="message"></textarea>
+							  </label>
+							
+							<button type="submit">Send</button>
+							</form>
 							</article>
 
 					</div>
