--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
 										</div>
 									</div>
 									<ul class="actions">
-										<li><button type="submit" value="Send Message" class="primary" /></li>
-										<li><button type="reset" value="Reset" /></li>
+										<li><input type="submit" value="Send Message" class="primary" /></li>
+										<li><input type="reset" value="Reset" /></li>
 									</ul>
 							
 							</form>
